Java8/12 deprecated fixes