@@ -196,7 +196,7 @@ public class TestXCoordReporter {
                 row.put(header[14], mgrs);
 
                 row.put(header[15], m.formatPrecision());
-                row.put(header[16], new Long(m.start));
+                row.put(header[16], Long.valueOf(m.start));
 
                 report.write(row, header, xcoordResultsSpec);
             }
